--- a/src/index.css
+++ b/src/index.css
@@ -22,47 +22,30 @@ a:hover {
   color: #535bf2;
 }
 
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+.app {
+  width: 500px;
+  text-align: center;
+  padding: 20px;
+  margin: 0 auto;
+
+}
+
+.window-pane {
+  font-size: 25px;
+  color: black;
+}
+
+.daily, .container {
+  font-size: 15px;
+  color: black;
+}
+
+.text-lg, .font-semibold {
+  font-size: 25px;
+  color: black;
 }
 
 h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+  font-size: 30px;
+  color: black;
 }
